--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <div>
-            <form>
+            <form name="Calculator">
                 <input name="display" placeholder="0" class="answer-bar"/>
                 <br>
                 <input type="button" value="1" onclick="document.Calculator.display.value + ="1""/>
